// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`master/contract — CommercialLicenseViewState > snapshot do shape canônico (chaves + enums) 1`] = `
{
  "displayStatuses": [
    "Ativa",
    "Agendada",
    "Expirada",
    "Bloqueada",
  ],
  "keys": [
    "phase",
    "displayStatus",
    "statusLabel",
    "shouldBlock",
    "reason",
    "label",
    "remainingLabel",
    "daysDelta",
    "daysRemaining",
    "daysExpired",
    "startsAtEffective",
    "expiresAt",
    "startsToday",
    "expiresToday",
  ],
  "phases": [
    "scheduled",
    "active",
    "expired",
  ],
}
`;

exports[`master/contract — respostas reais MasterApiServices (memory) > licenses + tenants + dashboard respeitam o contrato 1`] = `
{
  "dashboardTopLevel": [
    "executive",
    "modules",
    "ok",
    "summary",
  ],
  "executiveKeys": [
    "annualRevenueCents",
    "charts",
    "companies",
    "companiesActive",
    "companiesBlocked",
    "companiesTrial",
    "currency",
    "gateway",
    "gatewayActive",
    "licenseValidities",
    "licenses",
    "licensesActive",
    "licensesExpired",
    "licensesExpiring",
    "licensesExpiring30d",
    "licensesExpiring7d",
    "licensesScheduled",
    "licensesTrial",
    "modeHybrid",
    "modeLocal",
    "modeSaas",
    "monthlyRevenueCents",
    "persistence",
    "pixPending",
    "recentPayments",
    "renewalsDue",
    "revenue",
    "revenueCents",
    "source",
    "subscriptions",
    "support",
    "updates",
    "users",
  ],
  "licensesTopLevel": [
    "central",
    "cloudLicenses",
    "companyLicenses",
    "count",
    "items",
    "licenses",
    "localCount",
    "localLicenses",
    "note",
    "ok",
    "operationalAuthWired",
    "persistence",
    "snapshot",
  ],
  "tenantLicenseValidityKeys": [],
  "tenantsTopLevel": [
    "adapter",
    "count",
    "ok",
    "persistence",
    "tenants",
  ],
  "validityKeysSample": [],
}
`;

exports[`master/contract — validadores por endpoint (fixtures) > snapshots dos top-level keys dos quatro endpoints 1`] = `
{
  "GET /api/master/dashboard": [
    "ok",
    "modules",
    "summary",
    "executive",
  ],
  "GET /api/master/licenses": [
    "ok",
    "companyLicenses",
    "licenses",
    "central",
    "items",
    "count",
    "snapshot",
    "cloudLicenses",
    "localLicenses",
    "localCount",
    "persistence",
    "operationalAuthWired",
    "masterOnly",
    "note",
  ],
  "GET /api/master/operational-companies": [
    "ok",
    "companies",
    "orphans",
    "count",
    "uninitializedCount",
  ],
  "GET /api/master/tenants": [
    "ok",
    "tenants",
    "legacyMasterTenants",
    "count",
    "persistence",
    "adapter",
  ],
}
`;
